# Device-Authentication-Bridge-for-Kimi-CLI

./: .gitignore  CHANGELOG.md  Dockerfile  GITHUB_SETUP.md  LICENSE  MANIFEST.in  PUSH_TO_GITHUB.md  README.md  pyproject.toml
.github/workflows/: docker.yml  publish.yml  tests.yml
docs/: ARCHITECTURE.md
examples/: basic_usage.py  fastapi_app.py  flask_app.py
src/kimi_auth_bridge/: bridge.py
tests/: test_bridge.py  test_coverage_improvements.py
