[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "kimi-auth-bridge"
version = "1.0.0"
description = "Device Authentication Bridge for Kimi CLI - Reusable module for OAuth token retrieval"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["kimi", "oauth", "authentication", "cli", "api", "bridge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Authentication",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
]
examples = [
    "flask>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "requests>=2.28",
    "aiohttp>=3.8",
]

[project.urls]
Homepage = "https://github.com/yourusername/kimi-device-auth-bridge"
Documentation = "https://github.com/yourusername/kimi-device-auth-bridge/tree/main/docs"
Repository = "https://github.com/yourusername/kimi-device-auth-bridge.git"
Issues = "https://github.com/yourusername/kimi-device-auth-bridge/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
